[package]
name = "cags"
version = "0.1.0"
authors = ["Alexandre Duc <alexandre.duc@heig-vd.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
rpassword = "7.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"

argon2 = "0.4.1"
zxcvbn = "2.2.1"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10.6"
base16ct = "0.1.1"
dotenv = "0.15.0"
dryoc = {version ="0.4.3",features = ["serde"]}
